--- a/modals.scss
+++ b/modals.scss
@@ -19,7 +19,7 @@ body.modal-open {
   bottom: 0;
   display: none;
   left: 0;
-  letter-spacing: -4.5px;
+  letter-spacing: -4px;
   overflow: auto;
   
   @if $container-padding > 0 {
